# Egyptian-Financial-Advisor

./: Review EFA_PRD.md
.github/workflows/: terraform.yml
Egyptian-Financial-Advisor/: .gitignore  README.md  docker-compose.yml  gold_purity.py  main.py  pyproject.toml
Egyptian-Financial-Advisor/.github/workflows/: terraform.yml
Egyptian-Financial-Advisor/config/: egx_tickers.txt
Egyptian-Financial-Advisor/data/: bank_cds_latest.csv  cbe_rates_latest.csv  egx_stocks_latest.csv  egypt_gold_latest.csv  historical_exchange.csv  historical_gold.csv  macro_indicators.csv  real_estate_latest.csv
Egyptian-Financial-Advisor/python3.13/: main.py
Egyptian-Financial-Advisor/scripts/: bank_cd_scraper.py  cbe_rates.py  exc_rates.py  gold_prices.py  historical_data.py  macro_indicators.py  stock_market.py
Egyptian-Financial-Advisor/terraform/: main.tf  variables.tf
Egyptian-Financial-Advisor/tests/: test_gold_purity.py
backend/: .env.example  .gitignore  requirements.txt
backend/app/: main.py
backend/app/api/: chat.py  dependencies.py  profile.py
backend/app/core/: config.py
backend/app/schemas/: chat.py  profile.py
backend/app/services/: agent.py  bigquery_client.py  firebase_admin.py
backend/app/tools/: market_tools.py  web_tools.py
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: dim_ticker_performance.sql  fct_daily_asset_performance.sql  fct_historical_stats.sql  schema.yml
dbt/models/staging/: schema.yml  stg_efa__exchange.sql  stg_efa__gold.sql  stg_efa__stocks.sql
frontend/: .env.local.example  package-lock.json  package.json
(+7 files in other folders)
