[project]
name = "egyptian-financial-advisor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-bigquery>=3.41.0",
    "google-generativeai>=0.8.6",
    "pandas>=3.0.2",
    "streamlit>=1.56.0",
    "yfinance>=1.2.0",
]

[tool.uv.workspace]
members = [
    "python3.13",
]
